styles/styles.css
html {
    width: 100vw;
}

a {
    text-decoration: none;
}

a:visited {
    color: black;
}

#about {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    height: 80vmin;
    padding: 30px 0px;
}

.about-info {
    width: 50%;
}

.about-info p {
    font-family: 'Roboto', sans-serif;
    font-size: 3.5vmin;
}

#body {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(255, 244, 224);
    width: 100%;
    margin: 0;
}

.code-demo {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
}

.code-demo a {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: blanchedalmond;
    width: 40%;
    padding: 1.4%;
    color: black;
    border-radius: 5%;
    border: 1px solid grey;
}

.code-demo a:hover {
    background-color: rgb(255, 246, 233);
}

.footer {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
}

#hat-button {
    background-color: blanchedalmond;
    padding: 5%;
    width: 50%;
    border-radius: 5%;
    border: 1px solid grey;
    color: black;
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
    display: fixed
}

#hat-button:hover {
    background-color: rgb(255, 246, 233);
}

#hat-image {
    height: 40%;
    width: 40%;
    margin: 10px;
    display: none;
}

#header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image: url('../images/header-background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-color: wheat;
    width: 100%;
    height: 85vh;
    font-size: 31px;
    font-family: 'Poppins', sans-serif;
    color: white;
}

h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 30px;
}

.introduction {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    animation-name: fadein;
    animation-duration: 2s;
    animation-fill-mode: forwards;
    
}

@keyframes fadein {
    from {
        opacity: 0;
        height: 60%;
    }
    to {
        opacity: 1;
        height: 40%;
    }
}


.language-list {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    gap: 10px;
    width: 100%;
}

#links {
    position: fixed;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 75px;
    background-image: linear-gradient(to right, rgb(140, 251, 255), rgb(196, 253, 255), rgb(140, 251, 255));
}

#links a {
    font-family: 'Roboto', sans-serif;
    font-size: 30px;
    margin: 10px;
}

#links a:hover {
    text-decoration: underline;
}

.links-figure {
    display: flex;
    align-items: center;
}

.links-figure img {
    width: 60px;
    height: 60px;
}

#ppe {
    height: 60%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

#projects {
    display: grid;
    justify-items: center;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 10px;
    width: 100%;
}

#projects h2 {
    grid-column: 1/-1;
}

.project-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: linear-gradient(145deg, rgb(198, 238, 198), lightgreen, rgb(198, 238, 198));
    border: 2px solid green;
    border-radius: 3%;
    padding: 15px;
    font-family: 'Roboto', sans-serif;
    font-size: 1.5em;
}

#project-pending {
    background-image: linear-gradient(145deg, orange, rgb(255, 255, 104), orange);
}

.project-preview {
    height: 60%;
    width: 90%;
}

#skills {
    display: flex;
    width: 100%;
    background-image: linear-gradient(145deg, white, lightblue, white);
    flex-direction: column;
    align-items: center;
}

.skills-figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 150px;
}

.skills-figure figcaption {
    font-size: 1.5em;;
    font-family: 'Roboto', sans-serif;
}

.skills-figure img {
    width: 85px;
    height: 85px;
}

.skills-figure img:hover {
    transform: scale(1.1);
}

